# raymart

./: .gitignore  Cargo.toml  Makefile  README.md  scene.json  scene.toml
scenes/: checkered_spheres.toml  composed.toml  cuboids_cornell.toml  dragon.toml  dragon_head.toml  dragon_perlin.toml  dragon_w_gold_spheres.toml  empty_cornell.toml  frog_sphere.toml  glass_ball_cornell.toml  perlin_spheres.toml  simple_light.toml
src/: bbox.rs  blender.rs  bvh.rs  color.rs  hit.rs  main.rs  material.rs  noise.rs  ray.rs  scene.rs  v3.rs
