[package]
name = "raymart"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

[dependencies]
image = "0.25.5"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tobj = { version = "4.0.3", default-features = false, features = ["use_f64"] }
wide = "0.7.32"

[dev-dependencies]
simple_test_case = "1.2.0"
